--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "prettier": "prettier ./ --write",
-    "test": "jest"
+    "prettier": "prettier ./ --write"
   },
   "repository": {
     "type": "git",
@@ -19,7 +18,6 @@
   },
   "homepage": "https://github.com/natallia-belavusava/serverless-aws#readme",
   "dependencies": {
-    "jest": "^29.4.3",
     "prettier": "2.7.1"
   }
 }
