--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -1,10 +1,4 @@
 service: product-service
-# app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
 frameworkVersion: "3"
 
 provider:
@@ -22,7 +16,7 @@ package:
 custom:
   webpack:
     includeModules: false
-    webpackConfig: 'webpack.config.cjs' # Name of webpack configuration file
+    webpackConfig: "webpack.config.cjs" # Name of webpack configuration file
 
 functions:
   getProductsList:
