--- a/product-service/package.json
+++ b/product-service/package.json
@@ -13,10 +13,14 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.20.2",
+    "dotenv": "^16.0.3",
     "jest": "^29.4.3",
-    "prettier": "2.7.1"
+    "joi": "^17.8.3",
+    "prettier": "2.7.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "serverless-dotenv-plugin": "^4.0.2",
     "serverless-webpack": "^5.11.0"
   }
 }
