--- a/package.json
+++ b/package.json
@@ -5,19 +5,27 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "prettier": "prettier ./ --write"
+    "prettier": "prettier ./ --write",
+    "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/natallia-belavusava/serverless-aws.git"
+  "jest": {
+    "collectCoverage": true
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/natallia-belavusava/serverless-aws/issues"
-  },
-  "homepage": "https://github.com/natallia-belavusava/serverless-aws#readme",
   "dependencies": {
-    "prettier": "2.7.1"
+    "@aws-sdk/client-s3": "^3.287.0",
+    "@aws-sdk/s3-request-presigner": "^3.287.0",
+    "@babel/preset-env": "^7.20.2",
+    "aws-sdk": "^2.1331.0",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.0.3",
+    "jest": "^29.4.3",
+    "joi": "^17.8.3",
+    "prettier": "2.7.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "aws-sdk-mock": "^5.8.0",
+    "serverless-dotenv-plugin": "^4.0.2",
+    "serverless-webpack": "^5.11.0"
   }
 }
