--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.287.0",
     "@aws-sdk/s3-request-presigner": "^3.287.0",
-    "@babel/preset-env": "^7.20.2",
     "aws-sdk": "^2.1331.0",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
@@ -24,7 +23,10 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "aws-sdk-mock": "^5.8.0",
+    "babel-jest": "^29.5.0",
     "serverless-dotenv-plugin": "^4.0.2",
     "serverless-webpack": "^5.11.0"
   }
