--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.287.0",
+    "@aws-sdk/client-sns": "^3.294.0",
     "@aws-sdk/s3-request-presigner": "^3.287.0",
     "aws-sdk": "^2.1331.0",
     "csv-parser": "^3.0.0",
