--- a/import-service/serverless.yml
+++ b/import-service/serverless.yml
@@ -59,3 +59,18 @@ functions:
             parameters:
               querystrings:
                 name: true
+          authorizer:
+            arn: arn:aws:lambda:eu-west-1:726228754629:function:authorization-service-development-basicAuthorizer
+            type: token
+
+resources:
+  Resources:
+    Unauthorized:
+      Type: AWS::ApiGateway::GatewayResponse
+      Properties:
+        ResponseParameters:
+          "gatewayresponse.header.Access-Control-Allow-Origin": "'*'"
+          "gatewayresponse.header.Access-Control-Allow-Headers": "'*'"
+        ResponseType: "DEFAULT_4XX"
+        RestApiId:
+          Ref: "ApiGatewayRestApi"
